Dumbledad/issue/2187 reduce spacing (#1615)
* Removing row bottom margin

* Allow bottom_margin flag on the bursary component

* Swapping to class_name as per Dan's suggestion

* Adding a preview for the Bursary component

* Adding bottom_margin back

* Better margin class

* Test for margin as default

* Test for no bottom margin when flag set

--- a/app/components/bursary_component/bursary_component.scss
+++ b/app/components/bursary_component/bursary_component.scss
@@ -1,5 +1,8 @@
 .bursary-component {
   @include bottom-margined;
+  &--no-margin {
+    margin-bottom: 0;
+  }
 }
 
 .bursary-component__title {
